-added expand/collapse all button in test logic -socket server timeouts decreased -UI tweaks -import/export fixes

--- a/v3/cms/css/styles.css
+++ b/v3/cms/css/styles.css
@@ -150,6 +150,7 @@ ul {
 }
 .tdSectionColumnType{
     width:150px;
+    font-weight: bold;
 }
 .tdSectionColumnAction{
 }
